--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -313,7 +313,7 @@ textarea.input {
 /*----------------------------*\
 	logo
 \*----------------------------*/
-/*
+
 .nav-logo {
   position: absolute;
   left: 50%;
@@ -331,7 +331,7 @@ textarea.input {
 .nav-logo .logo>img {
   width: 100%;
   max-height: 70px;
-} */
+}
 
 /*----------------------------*\
 	search
